First bonds, omens, all

--- a/lang/olden.json
+++ b/lang/olden.json
@@ -13,10 +13,8 @@
   "CAIRN.AddFeature": "Add Feature",
   "CAIRN.Armor": "Armor",
   "CAIRN.Background": "Background",
-  "CAIRN.Omen": "Omen",
-  "CAIRN.Bond": "Bond",
   "CAIRN.Blast": "Blast",
-  "CAIRN.BoldMeanEquipped": "(bold items are equipped)",
+  "CAIRN.BoldMeanEquipped": "(bold means equipped)",
   "CAIRN.Bulky": "Bulky",
   "CAIRN.CharacterGenerator": "Create character",
   "CAIRN.CharacterRegeneratorConfirm": "Are you sure you want to delete and regenerate this character?",
@@ -31,7 +29,7 @@
   "CAIRN.Dead": "Dead",
   "CAIRN.Deprived": "Deprived",
   "CAIRN.Description": "Description",
-  "CAIRN.DieOfFate": "Roll Fate",
+  "CAIRN.DieOfFate": "Die Of Fate",
   "CAIRN.DeleteItem": "Delete Item",
   "CAIRN.EditItem": "Edit Item",
   "CAIRN.EditFeature": "Edit Feature",  
