bad character sheet edits

--- a/lang/en.json
+++ b/lang/en.json
@@ -59,8 +59,10 @@
   "CAIRN.Panicked": "Panicked",
   "CAIRN.RemoveFatigue": "Remove fatigue",
   "CAIRN.RegenerateCharacter": "Regenerate",
-  "CAIRN.Rest": "Rest",
-  "CAIRN.RestoreAbilities": "Restore Abilities",
+  "CAIRN.Rest": "Quick rest",
+  "CAIRN.RestHover": "Restores HP",
+  "CAIRN.RestoreAbilities": "Week's rest",
+  "CAIRN.RestoreAbilitiesHover": "Restores ability scores",
   "CAIRN.RollDamage": "Roll Damage",
   "CAIRN.Rolling": "Rolling",
   "CAIRN.RollingDmgWith": "Rolling damage with",
